// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/MultiInput Compact 1`] = `
Array [
  <label
    className="fd-form-label"
    htmlFor="multiInputCompactExample"
  >
    Compact
  </label>,
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="fd-input-group--control fd-input-group"
                onClick={[Function]}
              >
                <div
                  className="fd-tokenizer fd-tokenizer--compact"
                  compact={true}
                >
                  <div
                    className="fd-tokenizer__inner"
                  >
                    <input
                      className="fd-input fd-input--compact fd-input-group__input fd-tokenizer__input"
                      id="multiInputCompactExample"
                      placeholder="Placeholder"
                      type="text"
                    />
                  </div>
                </div>
                <span
                  className="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
                >
                  <button
                    aria-label="Show options"
                    className="fd-button fd-button--transparent fd-button--compact fd-input-group__button"
                    type="button"
                  >
                    <i
                      aria-hidden={true}
                      className="sap-icon--value-help"
                      role="img"
                    />
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Component API/MultiInput Dev 1`] = `
Array [
  <label
    className="fd-form-label"
    htmlFor="multiInputDevExample"
  >
    Dev
  </label>,
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="fd-input-group--control fd-input-group"
                onClick={[Function]}
              >
                <div
                  className="fd-tokenizer"
                  compact={false}
                  disabled={false}
                >
                  <div
                    className="fd-tokenizer__inner"
                  >
                    <input
                      className="fd-input fd-input-group__input fd-tokenizer__input"
                      disabled={false}
                      id="multiInputDevExample"
                      placeholder="Select a Fruit"
                      type="text"
                    />
                  </div>
                </div>
                <span
                  className="fd-input-group__addon fd-input-group__addon--button"
                  disabled={false}
                >
                  <button
                    aria-label="Show options"
                    className="fd-button fd-button--transparent fd-input-group__button"
                    type="button"
                  >
                    <i
                      aria-hidden={true}
                      className="sap-icon--value-help"
                      role="img"
                    />
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Component API/MultiInput Disabled 1`] = `
Array [
  <label
    className="fd-form-label"
    htmlFor="multiInputDisabledExample"
  >
    Disabled
  </label>,
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="fd-input-group--control is-disabled fd-input-group is-disabled"
                onClick={[Function]}
              >
                <div
                  className="fd-tokenizer"
                  disabled={true}
                >
                  <div
                    className="fd-tokenizer__inner"
                  >
                    <input
                      className="fd-input fd-input-group__input fd-tokenizer__input"
                      disabled={true}
                      id="multiInputDisabledExample"
                      placeholder="Placeholder"
                      type="text"
                    />
                  </div>
                </div>
                <span
                  className="fd-input-group__addon fd-input-group__addon--button"
                  disabled={true}
                >
                  <button
                    aria-label="Show options"
                    className="fd-button fd-button--transparent is-disabled fd-input-group__button"
                    disabled={true}
                    type="button"
                  >
                    <i
                      aria-hidden={true}
                      className="sap-icon--value-help"
                      role="img"
                    />
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Component API/MultiInput No Styles 1`] = `
Array [
  <label
    className="xxx-form-label"
    htmlFor="multiInputPrimaryExample"
  >
    Primary
  </label>,
  <div
    className="xxx-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="xxx-popover__control"
      >
        <div
          className="xxx-popover"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="xxx-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="xxx-input-group--control xxx-input-group"
                onClick={[Function]}
              >
                <div
                  className="xxx-tokenizer"
                >
                  <div
                    className="xxx-tokenizer__inner"
                  >
                    <input
                      className="xxx-input xxx-input-group__input xxx-tokenizer__input"
                      id="multiInputPrimaryExample"
                      placeholder="Placeholder"
                      type="text"
                    />
                  </div>
                </div>
                <span
                  className="xxx-input-group__addon xxx-input-group__addon--button"
                >
                  <button
                    aria-label="Show options"
                    className="xxx-button xxx-button--transparent xxx-input-group__button"
                    type="button"
                  >
                    <i
                      aria-hidden={true}
                      className="sap-icon--value-help"
                      role="img"
                    />
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Component API/MultiInput Primary 1`] = `
Array [
  <label
    className="fd-form-label"
    htmlFor="multiInputPrimaryExample"
  >
    Primary
  </label>,
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="fd-input-group--control fd-input-group"
                onClick={[Function]}
              >
                <div
                  className="fd-tokenizer"
                >
                  <div
                    className="fd-tokenizer__inner"
                  >
                    <input
                      className="fd-input fd-input-group__input fd-tokenizer__input"
                      id="multiInputPrimaryExample"
                      placeholder="Placeholder"
                      type="text"
                    />
                  </div>
                </div>
                <span
                  className="fd-input-group__addon fd-input-group__addon--button"
                >
                  <button
                    aria-label="Show options"
                    className="fd-button fd-button--transparent fd-input-group__button"
                    type="button"
                  >
                    <i
                      aria-hidden={true}
                      className="sap-icon--value-help"
                      role="img"
                    />
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Component API/MultiInput Validation States 1`] = `
<div
  className="fddocs-container"
>
  <div
    className="fd-form-group"
  >
    <label
      className="fd-form-label"
      htmlFor="multiInputErrorExample"
    >
      Multi input with an error
    </label>
    <div
      className="fd-form-item"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-popover"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onFocus={[Function]}
                onMouseDown={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="fd-popover__control"
                >
                  <div
                    aria-expanded={false}
                    aria-haspopup="true"
                    className="fd-input-group--control is-error fd-input-group is-error"
                    onClick={[Function]}
                  >
                    <div
                      className="fd-tokenizer"
                    >
                      <div
                        className="fd-tokenizer__inner"
                      >
                        <input
                          className="fd-input fd-input-group__input fd-tokenizer__input"
                          id="multiInputErrorExample"
                          placeholder="Error"
                          type="text"
                        />
                      </div>
                    </div>
                    <span
                      className="fd-input-group__addon fd-input-group__addon--button"
                    >
                      <button
                        aria-label="Show options"
                        className="fd-button fd-button--transparent fd-input-group__button"
                        type="button"
                      >
                        <i
                          aria-hidden={true}
                          className="sap-icon--value-help"
                          role="img"
                        />
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-form-group"
  >
    <label
      className="fd-form-label"
      htmlFor="multiInputWarningExample"
    >
      Multi input with a warning
    </label>
    <div
      className="fd-form-item"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-popover"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onFocus={[Function]}
                onMouseDown={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="fd-popover__control"
                >
                  <div
                    aria-expanded={false}
                    aria-haspopup="true"
                    className="fd-input-group--control is-warning fd-input-group is-warning"
                    onClick={[Function]}
                  >
                    <div
                      className="fd-tokenizer"
                    >
                      <div
                        className="fd-tokenizer__inner"
                      >
                        <input
                          className="fd-input fd-input-group__input fd-tokenizer__input"
                          id="multiInputWarningExample"
                          placeholder="Warning"
                          type="text"
                        />
                      </div>
                    </div>
                    <span
                      className="fd-input-group__addon fd-input-group__addon--button"
                    >
                      <button
                        aria-label="Show options"
                        className="fd-button fd-button--transparent fd-input-group__button"
                        type="button"
                      >
                        <i
                          aria-hidden={true}
                          className="sap-icon--value-help"
                          role="img"
                        />
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-form-group"
  >
    <label
      className="fd-form-label"
      htmlFor="multiInputSuccessExample"
    >
      Successful Multi input
    </label>
    <div
      className="fd-form-item"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-popover"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onFocus={[Function]}
                onMouseDown={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="fd-popover__control"
                >
                  <div
                    aria-expanded={false}
                    aria-haspopup="true"
                    className="fd-input-group--control is-success fd-input-group is-success"
                    onClick={[Function]}
                  >
                    <div
                      className="fd-tokenizer"
                    >
                      <div
                        className="fd-tokenizer__inner"
                      >
                        <input
                          className="fd-input fd-input-group__input fd-tokenizer__input"
                          id="multiInputSuccessExample"
                          placeholder="Success"
                          type="text"
                        />
                      </div>
                    </div>
                    <span
                      className="fd-input-group__addon fd-input-group__addon--button"
                    >
                      <button
                        aria-label="Show options"
                        className="fd-button fd-button--transparent fd-input-group__button"
                        type="button"
                      >
                        <i
                          aria-hidden={true}
                          className="sap-icon--value-help"
                          role="img"
                        />
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-form-group"
  >
    <label
      className="fd-form-label"
      htmlFor="multiInputInfoExample"
    >
      Multi input with some info
    </label>
    <div
      className="fd-form-item"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-popover"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onFocus={[Function]}
                onMouseDown={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="fd-popover__control"
                >
                  <div
                    aria-expanded={false}
                    aria-haspopup="true"
                    className="fd-input-group--control is-information fd-input-group is-information"
                    onClick={[Function]}
                  >
                    <div
                      className="fd-tokenizer"
                    >
                      <div
                        className="fd-tokenizer__inner"
                      >
                        <input
                          className="fd-input fd-input-group__input fd-tokenizer__input"
                          id="multiInputInfoExample"
                          placeholder="Information"
                          type="text"
                        />
                      </div>
                    </div>
                    <span
                      className="fd-input-group__addon fd-input-group__addon--button"
                    >
                      <button
                        aria-label="Show options"
                        className="fd-button fd-button--transparent fd-input-group__button"
                        type="button"
                      >
                        <i
                          aria-hidden={true}
                          className="sap-icon--value-help"
                          role="img"
                        />
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
